--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <ul role="list" class="card__bullets flow">
             <a><strong>NEW UPDATE LIVE</strong></a>
             <br>
-            <a><strong>(3/25/24)</strong></a>
+            <a><strong>(7/3/24)</strong></a>
           </ul>
         </div>
 
@@ -93,7 +93,7 @@
           <h2 class="card__heading"><i class="fa-brands fa-discord"></i></h2>
           <ul role="list" class="card__bullets flow">
             <li><a href="https://eaglercrack-archive.vercel.app"><strong>Eaglercrack Archive</strong></a></li>
-            <li><a href="/servers/servers.html"><strong>Server Checker</strong></a></li>
+            <li><a href="/servers/servercheck.html"><strong>Server Checker</strong></a></li>
           </ul>
         </div>
       </div>
