--- a/more.html
+++ b/more.html
@@ -100,10 +100,10 @@
           <h2 class="card__heading">Server Checker</h2>
           <ul role="list" class="card__bullets flow">
             <li>Eaglercraft Server Checker</li>
-            <li>(only eaglercraft servers)</li>
+            <li>(only Eaglercraft servers)</li>
             <br>
           </ul>
-          <a href="servers/servers.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
+          <a href="servers/servercheck.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
 
         <div class="cards__card card">
@@ -117,7 +117,7 @@
         <div class="cards__card card">
           <h2 class="card__heading">Eaglercrack FAQ</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Eaglercrack FAQ, credits, Q&A.</li>
+            <li>Eaglercrack FAQ, Credits and Q&A.</li>
             <br>
             <br>
           </ul>
