--- a/packs.html
+++ b/packs.html
@@ -101,7 +101,7 @@
         </div>
         
         <div class="cards__card card">
-          <img src="assets/packs/coldcrystaljpg"" class="imgB">
+          <img src="assets/packs/coldcrystal.jpg"" class="imgB">
           <ul role="list" class="card__bullets flow">
             <li><h2>Cold Crystal 16x</h2></li>
             <br>
@@ -285,7 +285,7 @@
         </div>
         
         <div class="cards__card card">
-          <img src="assets/error.png" class="imgB">
+          <img src="assets/packs/proofr.gif" class="imgB">
           <ul role="list" class="card__bullets flow">
             <li><h2>Proofr's Crystals Overlay</h2></li>
           </ul>
