--- a/worlds.html
+++ b/worlds.html
@@ -133,7 +133,7 @@
           </div>
 
           <div class="cards__card card">
-            <h2 class="card__heading">THE BEST WORLD EVER!!!!!!!/h2>
+            <h2 class="card__heading">THE BEST WORLD EVER!!!!!!!</h2>
             <ul role="list" class="card__bullets flow">
                 <img src="assets/worlds/old_worlde.png" class="imgB">
                 <br>    
