--- a/1.8.html
+++ b/1.8.html
@@ -74,7 +74,7 @@
       <div class="cards__card card">
         <h2 class="card__heading">EaglercraftX</h2>
         <ul role="list" class="card__bullets flow">
-          <li>Version: Most recent (u27)</li>
+          <li>Version: u31</li>
         </ul>
         <a href="test.html" class="card__cta cta"><i class="fa-solid fa-play"></i>&nbsp Play</a>
         <a id="myBtn7" class="card__cta cta"><i class="fa-solid fa-download"></i>&nbsp Download</a>
