--- a/blogs/links.html
+++ b/blogs/links.html
@@ -31,19 +31,23 @@
       <div class="spacer"></div>
       <ul class="navElements">
           <li class="active">
-              <a href="../index.html">Home</a>
+            <a href="/index.html"><i class="fa-solid fa-house"></i> Home</a>
           </li>
           <li>
-              <a href="../clients.html">Clients</a>
+            <a href="/clients.html"><i class="fa-solid fa-play"></i> Clients</a>
           </li>
           <li>
-              <a href="../servers.html">Servers</a>
+            <a href="/servers.html"><i class="fa-solid fa-server"></i> Servers</a>
           </li>
           <li>
-            <a href="../packs.html">Packs</a>
-        </li>
+            <a href="/packs.html"><i class="fa-solid fa-box"></i> Packs</a>
+          </li>
           <li>
-              <a href="../more.html">More...</a>
+            <a href="https://eaglercrack-archive.github.io"><i class="fa-solid fa-box-archive"></i> Archive</a>
+          </li>
+          <li>
+            <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
+          </li>
           </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
@@ -89,6 +93,8 @@
 <h1 class="h1c">Other Links</h1>
 <br>
 <a class="h1b" href="https://eaglercrack.github.io">https://eaglercrack.github.io</a>
+<br>
+<a class="h1b" href="https://eaglercrack.net">https://eaglercrack.net</a>
 <br>
 <br>
 <a></a> <!-- added <a> because the breaks wouldn't show without -->
