--- a/more/forms.html
+++ b/more/forms.html
@@ -34,24 +34,23 @@
       <div class="spacer"></div>
       <ul class="navElements">
         <li class="active">
-          <a href="../index.html">Home</a>
-        </li>
-        <li>
-          <a href="../clients.html">Clients</a>
-        </li>
-        <li>
-          <a href="../servers.html">Servers</a>
-        </li>
-        <li>
-          <a href="../packs.html">Packs</a>
-        </li>
-        <li>
-          <a href="../worlds.html">Worlds</a>
-        </li>
-        <li>
-          <a href="../more.html">More...</a>
-        </li>
-      </ul>
+          <a href="/index.html"><i class="fa-solid fa-house"></i> Home</a>
+      </li>
+      <li>
+        <a href="/clients.html"><i class="fa-solid fa-play"></i> Clients</a>
+      </li>
+      <li>
+        <a href="/servers.html"><i class="fa-solid fa-server"></i> Servers</a>
+      </li>
+      <li>
+        <a href="/packs.html"><i class="fa-solid fa-box"></i> Packs</a>
+      </li>
+      <li>
+        <a href="https://eaglercrack-archive.github.io"><i class="fa-solid fa-box-archive"></i> Archive</a>
+      </li>
+      <li>
+        <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
+      </li>
 
       <div style="margin: 0 30px 0 0">
         <a class="button" href="https://discord.gg/qAbTAAv6dU">
