--- a/packs/crystals.html
+++ b/packs/crystals.html
@@ -32,19 +32,22 @@
       <div class="spacer"></div>
       <ul class="navElements">
           <li class="active">
-              <a href="../index.html">Home</a>
+            <a href="/index.html"><i class="fa-solid fa-house"></i> Home</a>
           </li>
           <li>
-              <a href="../clients.html">Clients</a>
+            <a href="/clients.html"><i class="fa-solid fa-play"></i> Clients</a>
           </li>
           <li>
-              <a href="../servers.html">Servers</a>
+            <a href="/servers.html"><i class="fa-solid fa-server"></i> Servers</a>
           </li>
           <li>
-            <a href="../packs.html">Packs</a>
-        </li>
+            <a href="/packs.html"><i class="fa-solid fa-box"></i> Packs</a>
+          </li>
           <li>
-              <a href="../more.html">More...</a>
+            <a href="https://eaglercrack-archive.github.io"><i class="fa-solid fa-box-archive"></i> Archive</a>
+          </li>
+          <li>
+            <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
           </li>
       </ul>
       <div style="margin: 0 30px 0 0;">
@@ -72,7 +75,7 @@
         </div>
 
         <div class="cards__card card">
-            <img src="../assets/error.png"" class="imgB">
+            <img src="../assets/error.png" class="imgB">
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Yellow Crystals</strong></h1></li>
             </ul>
@@ -80,7 +83,7 @@
           </div>
 
         <div class="cards__card card">
-          <img src="../assets/error.png"" class="imgB">
+          <img src="../assets/error.png" class="imgB">
           <ul role="list" class="card__bullets flow">
             <li><h1><strong>Green Crystals</strong></h1></li>
           </ul>
@@ -88,7 +91,7 @@
         </div>
 
         <div class="cards__card card">
-            <img src="../assets/error.png"" class="imgB">
+            <img src="../assets/error.png" class="imgB">
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Orange Crystals</strong></h1></li>
             </ul>
@@ -96,7 +99,7 @@
           </div>
 
           <div class="cards__card card">
-            <img src="../assets/error.png"" class="imgB">
+            <img src="../assets/error.png" class="imgB">
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Red Crystals</strong></h1></li>
             </ul>
@@ -104,7 +107,7 @@
           </div>
 
           <div class="cards__card card">
-            <img src="../assets/error.png"" class="imgB">
+            <img src="../assets/error.png" class="imgB">
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Blue Crystals</strong></h1></li>
             </ul>
@@ -112,7 +115,7 @@
           </div>
 
           <div class="cards__card card">
-            <img src="../assets/error.png"" class="imgB">
+            <img src="../assets/packs/proofr.gif" class="imgB">
             <ul role="list" class="card__bullets flow">
               <li><h1><strong>Purple Crystals</strong></h1></li>
             </ul>
