--- a/servers.html
+++ b/servers.html
@@ -36,24 +36,23 @@
       <div class="spacer"></div>
       <ul class="navElements">
         <li class="active">
-          <a href="/index.html">Home</a>
-        </li>
-        <li>
-          <a href="/clients.html">Clients</a>
-        </li>
-        <li>
-          <a href="/servers.html">Servers</a>
-        </li>
-        <li>
-          <a href="/packs.html">Packs</a>
-        </li>
-        <li>
-          <a href="/worlds.html">Worlds</a>
-        </li>
-        <li>
-          <a href="/more.html">More...</a>
-        </li>
-      </ul>
+          <a href="/index.html"><i class="fa-solid fa-house"></i> Home</a>
+      </li>
+      <li>
+        <a href="/clients.html"><i class="fa-solid fa-play"></i> Clients</a>
+      </li>
+      <li>
+        <a href="/servers.html"><i class="fa-solid fa-server"></i> Servers</a>
+      </li>
+      <li>
+        <a href="/packs.html"><i class="fa-solid fa-box"></i> Packs</a>
+      </li>
+      <li>
+        <a href="https://eaglercrack-archive.github.io"><i class="fa-solid fa-box-archive"></i> Archive</a>
+      </li>
+      <li>
+        <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
+      </li>
 
       <div style="margin: 0 30px 0 0">
         <a class="button" href="https://discord.gg/qAbTAAv6dU">
@@ -239,7 +238,7 @@
     <div class="box box21">
       <div class="title title1">ZythMC</div>
       <div class="status status21"></div>
-      <div class="description description21">Bedwars</div>
+      <div class="description description21">Factions, Bedwars, One Block</div>
       <div class="ip ip21" onclick="copyIP()">Copy IP</div>
     </div>
     <div class="box box3">
