on some pages, clicking on the logo didnt bring you to index.html
also fix discord thingy on other pages

--- a/blogs/bestfps.html
+++ b/blogs/bestfps.html
@@ -26,9 +26,10 @@
     
     <nav class="nav">
       <div class="logo">
-          <img src="../assets/eaglercrack.png" alt="Logo">
+        <img src="/assets/eaglercrack.png" alt="Logo" />
+        <a href="index.html">
           <h1>EaglercrackX</h1>
-      </div>
+        </a>
       <div class="spacer"></div>
       <ul class="navElements">
           <li class="active">
@@ -49,6 +50,7 @@
         <li>
           <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
         </li>
+      </ul>
     
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
