--- a/blogs/links.html
+++ b/blogs/links.html
@@ -25,8 +25,10 @@
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <nav class="nav">
       <div class="logo">
-        <img src="../assets/eaglercrack.png" alt="Logo">
+        <img src="/assets/eaglercrack.png" alt="Logo" />
+        <a href="index.html">
           <h1>EaglercrackX</h1>
+        </a>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
@@ -48,8 +50,8 @@
           <li>
             <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
           </li>
-          </li>
       </ul>
+
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
             <i class="fa-brands fa-discord"></i>&nbspJoin the Discord
