--- a/more/faq.html
+++ b/more/faq.html
@@ -25,8 +25,8 @@
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <nav class="nav">
       <div class="logo">
-        <img src="../assets/eaglercrack.png" alt="Logo" />
-        <a href="../index.html">
+        <img src="/assets/eaglercrack.png" alt="Logo" />
+        <a href="index.html">
           <h1>EaglercrackX</h1>
         </a>
       </div>
@@ -50,6 +50,7 @@
       <li>
         <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
       </li>
+      </ul>
 
       <div style="margin: 0 30px 0 0">
         <a class="button" href="https://discord.gg/qAbTAAv6dU">
