--- a/more/forms.html
+++ b/more/forms.html
@@ -26,8 +26,8 @@
     
     <nav class="nav">
       <div class="logo">
-        <img src="../assets/eaglercrack.png" alt="Logo" />
-        <a href="../index.html">
+        <img src="/assets/eaglercrack.png" alt="Logo" />
+        <a href="index.html">
           <h1>EaglercrackX</h1>
         </a>
       </div>
@@ -51,6 +51,7 @@
       <li>
         <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
       </li>
+      </ul>
 
       <div style="margin: 0 30px 0 0">
         <a class="button" href="https://discord.gg/qAbTAAv6dU">
