--- a/packs/crystals.html
+++ b/packs/crystals.html
@@ -26,9 +26,10 @@
 
     <nav class="nav">
       <div class="logo">
-        <img src="../assets/eaglercrack.png" alt="Logo">
+        <img src="/assets/eaglercrack.png" alt="Logo" />
+        <a href="index.html">
           <h1>EaglercrackX</h1>
-      </div>
+        </a>
       <div class="spacer"></div>
       <ul class="navElements">
           <li class="active">
