--- a/servers/servercheck.html
+++ b/servers/servercheck.html
@@ -27,27 +27,33 @@
 <body>
     <nav class="nav">
         <div class="logo">
-            <img src="../assets/eaglercrack.png" alt="Logo">
-            <a href="../index.html"><h1>EaglercrackX</h1></a>
+            <img src="/assets/eaglercrack.png" alt="Logo" />
+            <a href="index.html">
+              <h1>EaglercrackX</h1>
+            </a>
         </div>
         <div class="spacer"></div>
         <ul class="navElements">
             <li class="active">
-                <a href="../index.html">Home</a>
+                <a href="/index.html"><i class="fa-solid fa-house"></i> Home</a>
             </li>
             <li>
-                <a href="../clients.html">Clients</a>
+              <a href="/clients.html"><i class="fa-solid fa-play"></i> Clients</a>
             </li>
             <li>
-                <a href="../servers.html">Servers</a>
+              <a href="/servers.html"><i class="fa-solid fa-server"></i> Servers</a>
             </li>
             <li>
-                <a href="../packs.html">Packs</a>
+              <a href="/packs.html"><i class="fa-solid fa-box"></i> Packs</a>
             </li>
             <li>
-                <a href="../more.html">More...</a>
+              <a href="https://eaglercrack-archive.github.io"><i class="fa-solid fa-box-archive"></i> Archive</a>
             </li>
-        </ul>
+            <li>
+              <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
+            </li>
+          </ul>
+          
         <div style="margin: 0 30px 0 0;">
             <a class="button" href="https://discord.gg/qAbTAAv6dU">
                 <i class="fa-brands fa-discord"></i>&nbspJoin the Discord
