--- a/more.html
+++ b/more.html
@@ -123,6 +123,16 @@
           </ul>
           <a href="more/faq.html" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
         </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Crashport Viewer</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>See the reason a client is crashing.</li>
+            <li>(only works for 1.5.2)</li>
+            <br>
+          </ul>
+          <a href="crashport-viewer/app/" class="card__cta cta"><i class="fa-solid fa-right-to-bracket"></i>&nbsp View...</a>
+        </div>
         <!-- Start the cards -->
       <div class="overlay cards__inner"></div>
     </div>
