--- a/more/faq.html
+++ b/more/faq.html
@@ -26,7 +26,7 @@
     <nav class="nav">
       <div class="logo">
         <img src="/assets/eaglercrack.png" alt="Logo" />
-        <a href="index.html">
+        <a href="/index.html">
           <h1>EaglercrackX</h1>
         </a>
       </div>
