--- a/packs/crystals.html
+++ b/packs/crystals.html
@@ -27,7 +27,7 @@
     <nav class="nav">
       <div class="logo">
         <img src="/assets/eaglercrack.png" alt="Logo" />
-        <a href="index.html">
+        <a href="/index.html">
           <h1>EaglercrackX</h1>
         </a>
       <div class="spacer"></div>
