--- a/servers/servercheck.html
+++ b/servers/servercheck.html
@@ -28,7 +28,7 @@
     <nav class="nav">
         <div class="logo">
             <img src="/assets/eaglercrack.png" alt="Logo" />
-            <a href="index.html">
+            <a href="/index.html">
               <h1>EaglercrackX</h1>
             </a>
         </div>
@@ -53,7 +53,7 @@
               <a href="/more.html"><i class="fa-solid fa-circle-question"></i> More...</a>
             </li>
           </ul>
-          
+
         <div style="margin: 0 30px 0 0;">
             <a class="button" href="https://discord.gg/qAbTAAv6dU">
                 <i class="fa-brands fa-discord"></i>&nbspJoin the Discord
